--- a/app/blocks/page-contents/wp-rules/wp-rules.jade
+++ b/app/blocks/page-contents/wp-rules/wp-rules.jade
@@ -62,6 +62,16 @@ block content-page
 							a(href="https://wp-kama.ru/function/register_nav_menus")  подробнее
 						li Вывести в теме с помощью функции wp_nav_menu 
 							a(href="https://wp-kama.ru/function/wp_nav_menu")  подробнее
+					h4 Верстка через Elementor
+					ul
+						li Выбираем шаблон страницы Elementor полная ширина
+						li Добавление своих шрифтов НЕ в про версии
+							ul 
+								li Добавить класс с подклченным шрифтом
+								li К классу от elementor добавить font-famaly: inherit !important
+					h4 Advanced Custom Fields
+					ul
+						li 
 
 
 
