--- a/app/blocks/page-contents/index/index.jade
+++ b/app/blocks/page-contents/index/index.jade
@@ -119,6 +119,8 @@ block content-page
 								ul
 									li.nav__block_list
 										a(href="../app/rules-js.html" class="nav__block_link") Правила
+									li.nav__block_list
+										a(href="../app/babel.html" class="nav__block_link") Babel
 						div(class="col-lg-4")
 							.nav__block
 								h4(class="nav__block_name") Jquery
