--- a/app/blocks/page-contents/rules-js/rules-js.jade
+++ b/app/blocks/page-contents/rules-js/rules-js.jade
@@ -21,6 +21,8 @@ block content-page
 					h4 Правила
 					ul 
 						li Использовать способ написания на языке ECMAScript 6 и выше, но для поддержки старых браузеров скомпилировать через Babel
+						li в ES6 писать переменные через let 
+						li если писать переменные через const нельзя потом менять значение переменной
 
 
 	// End rules-js-content
